[package]
name = "jito-searcher-client"
version = "0.1.0-beta"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
bytes = "1.4"
futures = "0.3"
futures-util = "0.3"
jito-protos = { path = "../protos" }
log = "0.4"

solana-perf = "2.3.1"
solana-client = "2.3.1"
solana-sdk = "2.3.1"
thiserror = "1.0.39"
tokio = { version = "1.14.1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots", "tls-aws-lc"] }
tonic-prost = "0.14"
prost-types = "0.14"